--- a/src/dengun_crm/crm/templates/crm/campaign_email.html
+++ b/src/dengun_crm/crm/templates/crm/campaign_email.html
@@ -1,11 +1,11 @@
 <p>
   <strong>
-    Hello {{contact.fields.first_name}} {{contact.fields.last_name }},
+    Hello {{contact.first_name}} {{contact.last_name }},
   </strong>
 </p>
 
 <p>
-  {{ campaign.fields.message }}
+  {{ campaign.message }}
 </p>
 
 <p>
